clean a bit and add share the durability test with macos and linux