@@ -15,26 +15,28 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
  *******************************************************************************/
-package panamagl.offscreen;
+package panamagl.canvas;
 
-import panamagl.Image;
-import panamagl.opengl.GL;
+import org.junit.Test;
+import panamagl.factory.PanamaGLFactory;
+import panamagl.platform.Platform;
 
 /**
- * A frame buffer object, or {@link FBO}, can render OpenGL into an offscreen buffer that can later
- * be converted to an {@link Image}.
- *
- * @author Martin Pernollet
+ * This test is intentionnaly named DurabilityTest* to be ignored by maven
+ * while running tests (surefire config keeps Test* or *Test or ITTest*)
  */
-public interface FBO {
-  void prepare(GL gl);
-  void release(GL gl);
-  Image<?> getImage(GL gl);
-  void resize(int width, int height);
-  int getWidth();
-  int getHeight();
-  boolean isFlipY();
-  void setFlipY(boolean flipY);
-  
-  boolean isPrepared();
+// VM ARGS : --enable-native-access=ALL-UNNAMED --enable-preview -Djava.library.path=.://usr/lib/x86_64-linux-gnu/
+//@Ignore("Will add to specific build profile later.")
+public class DurabilityTestGLCanvasSwing_macOS {
+  public static int WAIT_FOR_RENDER_DISPATCHED_MS = 200;
+
+  @Test
+  public void whenPanelIsAdded_ThenGLEventListenerIsInvoked() throws InterruptedException {
+    if (!new Platform().isUnix())
+     return;
+    
+    PanamaGLFactory factory = PanamaGLFactory.select();
+    
+    DurabilityTestGLCanvasSwing.whenPanelIsAdded_ThenGLEventListenerIsInvoked(factory);
+  }
 }
